--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,11 +32,17 @@ dependencies:
     sdk: flutter
   cached_network_image: ^2.0.0
   http: ^0.13.5
+  
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  audioplayers: ^3.0.1
+  shared_preferences: ^2.0.20
+  path_provider: ^2.0.14
+  sqflite: ^2.2.6
+  badges: ^3.0.2
+  provider: ^6.0.5
+  
 
 dev_dependencies:
   flutter_test:
